--- a/src/app/bsr/editPost-it.html
+++ b/src/app/bsr/editPost-it.html
@@ -15,7 +15,7 @@
             </div>
             <div class="row ">
                 <mat-tab-group class="tabs-emojis">
-                    <mat-tab label="Emoji">
+                    <mat-tab label="Emoji" style="overflow-y: scroll;">
                         <br>
                         Faces<br>
                         😀 😃 😄 😁 😆 😅 😂 🤣 😊 😇 🙂 🙃 😉 😌 😍 🥰 😘 😗 😙 😚 😋 😛 😝 😜 🤪 🤨 🧐
