ready for deploy

--- a/src/app/bsr/bsr.component.scss
+++ b/src/app/bsr/bsr.component.scss
@@ -649,7 +649,7 @@ mat-tab-group ::-webkit-scrollbar {
 
 .menu-icon {
   position: absolute;
-  bottom: 100px;
+  top: 753px;
   z-index: 99;
   outline: none;
 }
