ready for deploy  4

--- a/src/app/bsr/bsr.component.scss
+++ b/src/app/bsr/bsr.component.scss
@@ -74,7 +74,7 @@
   bottom: 11px;
   height: 50px;
   width: 850px;
-  margin-left: 60px;
+  left: 56px;
   border-radius: 10px;
   opacity: 0.95;
 
