--- a/src/app/bsr/bsr.component.html
+++ b/src/app/bsr/bsr.component.html
@@ -315,7 +315,7 @@
                   </div>
                 </div> -->
 
-                <div class="col-md-12">
+                <div class="col-md-12"  fxLayoutAlign="center center">
                   <!-- MENU -->
                   <mat-toolbar class="toolbar-postit mat-elevation-z4 bounceIn" *ngIf="mainMenu">
 
