ready for deploy  5

--- a/src/app/bsr/bsr.component.html
+++ b/src/app/bsr/bsr.component.html
@@ -244,7 +244,7 @@
                     fxLayoutAlign="center center">
 
                     <mat-form-field appearance="outline">
-                      <input matInput type="New Name" placeholder="New Name" formControlName="name"
+                      <input matInput type="New Name" placeholder="name1, name2, name3" formControlName="name"
                         [(ngModel)]="newName">
                     </mat-form-field>
                     <button (click)="submitNewName(); newName=''" mat-icon-button color="success" aria-label="icon"
@@ -281,7 +281,7 @@
                       fxLayoutAlign="center center">
 
                       <mat-form-field appearance="outline">
-                        <input matInput type="New Name" placeholder="New Name" formControlName="name"
+                        <input matInput type="New Name" placeholder="name1, name2, name3"  formControlName="name"
                           [(ngModel)]="newName">
                       </mat-form-field>
                       <button (click)="submitNewName(); newName=''" mat-icon-button color="success" aria-label="icon"
