--- a/src/app/bsr/bsr.component.html
+++ b/src/app/bsr/bsr.component.html
@@ -80,10 +80,13 @@
         </div>
       </div> -->
 
-
+      <button class="fullscreen" (click)="openFullscreen()" mat-icon-button color="warn" aria-label="aria">
+        <mat-icon class="full-icon">fullscreen</mat-icon>
+      </button>
       <!-- PRESENTATION -->
       <div *ngIf="!createPostIt" fxLayoutAlign="center center" class="col">
         <div class="slide-box mat-elevation-z12" [style.background]="slideBackground">
+        
 
           <mat-toolbar class="toolbar mat-elevation-z4 bounceIn" *ngIf="mainMenu">
 
@@ -132,19 +135,22 @@
               {{pageCounter}}
             </button>
 
-            <button (click)="displayHelp(false)" mat-icon-button color="warn"
-              aria-label="Example icon-button with a heart icon">
+            <button (click)="displayHelp(false)" mat-icon-button color="warn" aria-label="aria">
               <mat-icon style="color: green !important;">help</mat-icon>
             </button>
 
-            <button (click)="mainMenu = false" mat-icon-button color="warn"
-              aria-label="Example icon-button with a heart icon">
+            <button (click)="mainMenu = false" mat-icon-button color="warn" aria-label="aria">
               <mat-icon style="color: grey !important;">keyboard_arrow_down</mat-icon>
             </button>
 
+
           </mat-toolbar>
+
         </div>
+
       </div>
+
+
 
 
 
@@ -155,6 +161,7 @@
           <div class="row">
 
             <div class="col-md-12">
+             
               <!-- Brandstorm and Names toolbar -->
               <mat-toolbar class="toptoolbar mat-elevation-z12" color="primary">
                 <div class="row">
@@ -167,10 +174,10 @@
                     [matTooltip]="'Names Create '+ nameCandidates.length" matTooltipPosition="right">
                     Names <span *ngIf="nameCandidates.length > 0">{{':'+nameCandidates.length}}</span>
                   </div>
-                  <button class="screen-button"   mat-icon-button *ngIf="isScreenButton" (click)="screenNames()">
+                  <button class="screen-button" mat-icon-button *ngIf="isScreenButton" (click)="screenNames()">
                     <mat-icon>folder_special</mat-icon>
                   </button>
-                
+
                 </div>
               </mat-toolbar>
             </div>
@@ -281,7 +288,7 @@
                       fxLayoutAlign="center center">
 
                       <mat-form-field appearance="outline">
-                        <input matInput type="New Name" placeholder="name1, name2, name3"  formControlName="name"
+                        <input matInput type="New Name" placeholder="name1, name2, name3" formControlName="name"
                           [(ngModel)]="newName">
                       </mat-form-field>
                       <button (click)="submitNewName(); newName=''" mat-icon-button color="success" aria-label="icon"
@@ -315,7 +322,7 @@
                   </div>
                 </div> -->
 
-                <div class="col-md-12"  fxLayoutAlign="center center">
+                <div class="col-md-12" fxLayoutAlign="center center">
                   <!-- MENU -->
                   <mat-toolbar class="toolbar-postit mat-elevation-z4 bounceIn" *ngIf="mainMenu">
 
@@ -358,9 +365,13 @@
                     </button>
 
                     <button (click)="mainMenu = false" mat-icon-button color="warn"
-                    aria-label="Example icon-button with a heart icon">
-                    <mat-icon style="color: grey !important;">keyboard_arrow_down</mat-icon>
-                  </button>
+                      aria-label="Example icon-button with a heart icon">
+                      <mat-icon style="color: grey !important;">keyboard_arrow_down</mat-icon>
+                    </button>
+
+                    <!-- <button class="fullscreen" (click)="openFullscreen()" mat-icon-button color="warn" aria-label="aria">
+                      <mat-icon style="color: grey !important;">fullscreen</mat-icon>
+                    </button> -->
 
                   </mat-toolbar>
                 </div>
