--- a/src/app/mobile/mobile.component.html
+++ b/src/app/mobile/mobile.component.html
@@ -1,5 +1,13 @@
 <div class="grid-container col">
     <div class="header">d</div>
-    <div class="body">d</div>
+    <div class="body">
+        <div class = "grid">
+            <div class="item" style="background: #00112211;">1</div>
+            <div class="item" style="background: #00112233;">2</div>
+            <div class="item" style="background: #00112288;">3</div>
+            <div class="item" style="background: #00112299;">4</div>
+            <div class="item" style="background: #001122aa;">5</div>
+          </div>
+    </div>
     <div class="footer">d</div>
   </div>
