--- a/src/app/mobile/mobile.component.scss
+++ b/src/app/mobile/mobile.component.scss
@@ -1,7 +1,7 @@
 .grid-container {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 0.3fr 2.5fr 0.2fr;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 1fr 2fr 1fr;
     gap: 0px 0px;
     grid-template-areas:
       "header header header header"
@@ -9,21 +9,43 @@
       "footer footer footer footer";
       height: 100vh;
     //   max-width: 400px;
-      justify-content: center;
-      align-items: center;
+    background-color: lightpink;
+    justify-content: space-evenly;
+    align-items: flex-start;
   }
   .footer { 
         grid-area: footer; 
-        height: 20vh;
+        height: 100%;
         background-color: lightblue;
 }
   .body { 
         grid-area: body; 
-        height: 60vh;
+        height: 100%;
         background-color: lightgreen;
+        justify-content: center;
+        align-items: center;
 }
   .header { 
         grid-area: header; 
-        height: 20vh;
+        height: 100%;
         background-color: lightsalmon;
 }
+
+.grid {
+    display: flex;
+    // grid-template-rows: 20px 20px 40px 20px 40px;
+    // grid-template-columns: 1fr 2fr 1fr;
+    justify-content: space-evenly;
+    // align-items: flex-end;
+    // height: 30vh;
+
+    .item{
+        color: white;
+        align-items: center;
+        text-align: center;
+        width: 40px;
+        // justify-content: space-around;
+        // align-items: center;
+        
+    }
+  }
