--- a/src/app/bsr/bsr.component.scss
+++ b/src/app/bsr/bsr.component.scss
@@ -478,24 +478,28 @@ mat-slider {
 }
 
 .synonyms-box {
+  background-color: white;
   position: fixed;
-  top: 155px;
-  min-width: 1050px;
-  animation: fadeIn; /* referring directly to the animation's @keyframe declaration */
-  animation-duration: 1.1s; /* don't forget to set a duration! */
-  z-index: 9999;
-  max-height: 671px;
-  overflow-y: scroll;
-  overflow-x: hidden;
-  border: indigo 1px solid;
+  background-origin: padding-box;
+  font-size: 21px;
+  top: 124px;
+  max-height: 770px;
+  line-height: 37px;
   border-radius: 10px;
+  padding-left: 10px;
+  border: solid lightgrey;
+  overflow-y: scroll;
+  width: 741px;
+  z-index: 99999;
+  animation: jackInTheBox; /* referring directly to the animation's @keyframe declaration */
+  animation-duration: 0.4s;
 }
 
 .add-synonyms {
-  position: fixed;
-  float: right;
-  top: 794px;
-  left: 1310px;
+  position: absolute;
+    /* float: right; */
+    right: 5px;
+    top: 714px;
 }
 
 .screen-button {
