--- a/src/app/bsr-mobile/bsr-mobile.component.scss
+++ b/src/app/bsr-mobile/bsr-mobile.component.scss
@@ -110,13 +110,13 @@
     }
 
     .names-list-card {
-        height: 200px;
+        height: -200px;
         overflow-y: scroll;
         min-width: 330px;
         line-height: 26px;
         border-bottom: #1e41ea solid 1px;
-        opacity: 0;
-        animation: jackInTheBox 0.5s ease 0.3s forwards;
+        opacity: 1;
+        animation: bounceInDown 0.5s ease 0.3s alternate;
     }
 
     .names-list-card::-webkit-scrollbar {
@@ -278,5 +278,8 @@
         font-size: 8px;
         outline: none;
         animation: heartBeat 1s ease-in-out 0.3s 1  forwards;
+        :hover{
+            animation: heartBeat 1s ease-in-out 0.3s 1  forwards;
+        }
     }
 }
